@@ -1,9 +1,14 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.501 2005/11/27 19:07:45 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.502 2005/11/28 01:42:22 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
+
+  27 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
+  src/templates/x86ArchitectureTemplate.py:
+  fix map() issue with grub code
+  replace kernel_names and initrd_names loops with one-liners
 
   27 Nov 2005; Preston Cody <codeman@gentoo.org>
   gli-dialog won't let you dynamic stage3 without systempkgs.txt.
